# FivcCliche

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: completion-summary.md  getting-started.md  migration-plan.md  setup-summary.md  users-module-completion.md  users-module-quick-reference.md
scripts/: ruff_wrapper.py
src/fivccliche/: __init__.py  cli.py
src/fivccliche/modules/agent_chats/: __init__.py  methods.py  models.py  routers.py  schemas.py  services.py
src/fivccliche/modules/agent_configs/: methods.py  models.py  routers.py  schemas.py  services.py
src/fivccliche/modules/chats/: services.py
src/fivccliche/modules/configs/: __init__.py  methods.py  models.py  routers.py  services.py
src/fivccliche/modules/users/: methods.py  models.py  routers.py  schemas.py  services.py  sso.py
src/fivccliche/services/implements/: db.py  modules.py
src/fivccliche/services/interfaces/: agent_chats.py  agent_configs.py  auth.py  configs.py  db.py
src/fivccliche/settings/: services.yml
src/fivccliche/utils/: __init__.py  chats.py  deps.py  generators.py  queries.py
tests/: test_agent_chats_api.py  test_agent_chats_routing.py  test_agent_chats_service.py  test_chats.py  test_configs_api.py  test_configs_service.py  test_generators.py  test_queries.py  test_users_api.py  test_users_service.py
