[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fivccliche"
version = "0.1.0"
description = "A modern async Python framework for building scalable applications with FastAPI and SQLModel"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Charlie Zhang", email = "sunnypig2002@gmail.com"}
]
keywords = ["fastapi", "sqlmodel", "async", "orm", "rest-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.0",
    "sqlmodel>=0.0.14",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fivcplayground>=0.1.8",
    "fivcglue>=0.1.5",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.1",
    "greenlet>=3.2.4",
    "python-cas>=1.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/MindFiv/FivcCliche"
Repository = "https://github.com/MindFiv/FivcCliche.git"
Issues = "https://github.com/MindFiv/FivcCliche/issues"

[tool.setuptools]
packages = ["fivccliche"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "PT", "RUF"]
ignore = ["E501", "I001", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
filterwarnings = [
    # Ignore deprecation warnings from third-party libraries
    "ignore::DeprecationWarning:strands.experimental.hooks",
    "ignore::DeprecationWarning:passlib.utils",
    "ignore::DeprecationWarning:passlib.handlers.argon2",
]

